SourceMetaData/src/objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>GLOBAL_Representative_Work_Phone_No__c</fullName>
        <description>The phone number for the customers representative</description>
        <formula>GLOBAL_Goal__r.REP_Representative_Work_Phone__c</formula>
        <inlineHelpText>The phone number for the customers representative</inlineHelpText>
        <label>Representative Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer&apos;s representative (set on the case record)</description>
        <inlineHelpText>The customer&apos;s representative (set on the case record)</inlineHelpText>
        <label>Representative</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Representing Customers on Tickets</relationshipLabel>
        <relationshipName>Tickets_Acting_as_Representative_on</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Resolution_Action_Other__c</fullName>
        <description>Resolution action if none in the drop down apply</description>
        <inlineHelpText>Resolution action if none in the drop down apply</inlineHelpText>
        <label>Resolution Action Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Resolution_Action__c</fullName>
        <description>The resolving action (if any) associated with the social care complaint or enquiry</description>
        <inlineHelpText>The resolving action (if any) associated with the social care complaint or enquiry</inlineHelpText>
        <label>Resolution Action</label>
        <picklist>
            <picklistValues>
                <fullName>Apology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Care Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explanation Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reassessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revised Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Learning</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Response_Sent__c</fullName>
        <description>The Date the response was sent</description>
        <inlineHelpText>The Date the response was sent</inlineHelpText>
        <label>Response Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLOBAL_SLA_Days_Remaining__c</fullName>
        <description>Number of days until SLA deadline. Measured in working or calendar days depending on SLA requirement.</description>
        <formula>IF ( ISPICKVAL( GLOBAL_Ticket_Status__c , &quot;Draft&quot;), 
null, 

IF( GLOBAL_SLA__r.Working_Days__c = TRUE, 
GLOBAL_SLA__r.SLA_Length_Days__c - GLOBAL_Working_Days_Elapsed__c, 
GLOBAL_SLA__r.SLA_Length_Days__c - GLOBAL_Calendar_Days_Elapsed__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days until SLA deadline. Measured in working or calendar days depending on SLA requirement.</inlineHelpText>
        <label>SLA Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLOBAL_SLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ticket SLA requirements.</description>
        <inlineHelpText>Ticket SLA requirements.</inlineHelpText>
        <label>SLA Lookup</label>
        <referenceTo>SLA__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Service_Group__c</fullName>
        <description>The service group for the ticket.</description>
        <inlineHelpText>The service group for the ticket.</inlineHelpText>
        <label>Service Group</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Service Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Contact Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regeneration, Economic Development and Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Service__c</fullName>
        <description>The specific service that is responsible for this ticket. (This field is used on the generic ticket record type but will be superseded when service specific record types are created)</description>
        <inlineHelpText>The specific service that is responsible for this ticket.</inlineHelpText>
        <label>Service</label>
        <picklist>
            <controllingField>GLOBAL_Service_Group__c</controllingField>
            <picklistValues>
                <fullName>Adult and community education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult social care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC - Complaint - Adult Social Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC - Complaint - Childrens Social Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC - Complaints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC - Compliment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC - Compliment - Social Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC - Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC - Concern - Social Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC - Enquiry  - Adult Social Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC - Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC - Request for Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s social care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC - Finance - Agresso Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC - Finance - Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC - Finance - Queries and Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC - HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC - ICT Ticket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC - Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC - Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Democratic and electoral services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Ticket_Date_Created__c</fullName>
        <description>The date that the ticket was created</description>
        <formula>DATEVALUE( CreatedDate )</formula>
        <inlineHelpText>Ticket was created on this date</inlineHelpText>
        <label>Ticket Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Ticket_Expected_Breach_Date__c</fullName>
        <description>The date at which the ticket is forecasted to be in breach of its SLA</description>
        <inlineHelpText>The date at which the ticket is forecasted to be in breach of its SLA</inlineHelpText>
        <label>Expected Breach Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Ticket_Expected_Escalation_Date__c</fullName>
        <description>The date at which the ticket is forecasted to be escalated as it is nearing breach of its SLA</description>
        <inlineHelpText>The date at which the ticket is forecasted to be escalated as it is nearing breach of its SLA</inlineHelpText>
        <label>Expected Escalation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Ticket_Generic_Action__c</fullName>
        <description>A drop down list of generic actions that the ticket may correspond to (superseded when Service specific fields and layouts are introduced)</description>
        <inlineHelpText>A drop down list of generic actions that the ticket may correspond to (superseded when Service specific fields and layouts are introduced)</inlineHelpText>
        <label>Service Request</label>
        <picklist>
            <controllingField>GLOBAL_Service__c</controllingField>
            <picklistValues>
                <fullName>ENV - Access - Advice on planning apps - new build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Access - Drop kerbs for pedestrians</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Access - Information on requirements - eg - disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - CCTV Feltham town centre - police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - CCTV Feltham town centre - public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - CCTV Hounslow town centre - police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - CCTV Hounslow town centre - public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - CCTV Non LBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Damaged bollards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Damaged Street signs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Damanged street bench</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - New bollards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - New Street bench</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - New Street signs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Public Rights of Way - Consultation enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Public Rights of Way - enforcement enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Public Rights of Way - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Public Rights of Way - Improvement plan - enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Public Rights of Way - Land registry search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Public Rights of Way - Legal requirements enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Removed bollards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Removed street bench</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Removed Street signs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENV - Street furniture - other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWY - Commercial crossover applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWY - Damage to highway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWY - Domestic crossover applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWY - Highways - Accident/Damages claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWY - Highways - Considering Claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWY - Highways Maintenance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Ticket_Status__c</fullName>
        <label>Ticket Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <color>#AFCADF</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <color>#33CCFF</color>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
                <color>#CC66CC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>SLA Breach</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
                <color>#33CC00</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Ticket_Subject__c</fullName>
        <description>A brief subject or description of the ticket</description>
        <inlineHelpText>A brief subject or description of the ticket</inlineHelpText>
        <label>Ticket Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Ticket_Summary_Brief__c</fullName>
        <description>Shorter Ticket Summer for email notifications</description>
        <formula>CASE( RecordType.Name , 
&apos;CCC - Payment&apos;,&apos;£&apos; + TEXT(PAY_Amount__c) 
, 
&apos;CCC - Complaints&apos;,&apos;Complaint / Enquiry&apos; 
, 
&apos;CCC - Request for Information&apos;,&apos;Request for Information - &apos; + TEXT(FOI_Type__c) 
, 
&apos;CCC - Other&apos;,&apos;Customer Contact Centre - Other&apos; 
, 
TEXT(GLOBAL_Service__c) + 
IF(NOT(ISBLANK(TEXT(GLOBAL_Ticket_Generic_Action__c))), &apos; - &apos; + TEXT(GLOBAL_Ticket_Generic_Action__c), &apos;&apos;) 

)</formula>
        <inlineHelpText>Shorter Ticket Summer for email notifications</inlineHelpText>
        <label>Ticket Summary Brief</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Ticket_Summary__c</fullName>
        <formula>CASE( RecordType.Name ,
&apos;CCC - Payment&apos;,&apos;Customer Contact Centre - Payment - £&apos; + TEXT(PAY_Amount__c) 
,
&apos;CCC - Complaints&apos;,&apos;Customer Contact Centre - Complaint / Enquiry&apos;
,
&apos;CCC - Request for Information&apos;,&apos;Customer Contact Centre - Request of Information - &apos; + TEXT(FOI_Type__c) 
,
&apos;CCC - Other&apos;,&apos;Customer Contact Centre - Other&apos;
,
&apos;Highways&apos;,HHW_Enquiry_Summary__c
,
&apos;CSC - ICT Ticket&apos;, &apos;ICT Ticket - &apos; + TEXT(GLOBAL_Type__c) + &apos; : &apos; + TEXT( ENQ_ICT_Service_Area__c ) +&apos; : &apos; + TEXT( ENQ_ICT_Activity__c )
,
&apos;CSC - Finance - Agresso Actions&apos;, &apos;Finance Agresso Action Ticket - &apos; + TEXT(GLOBAL_Type__c) + &apos; : &apos; + TEXT(GLOBAL_Finance_Sub_Type__c)
,
&apos;CSC - Finance - Service&apos;, &apos;Finance Service Ticket - &apos; + TEXT(GLOBAL_Type__c) + &apos; : &apos; + TEXT(GLOBAL_Finance_Sub_Type__c)
,
&apos;CSC - Finance - Queries and Training&apos;, &apos;Finance Queries and Training Ticket - &apos; + TEXT(GLOBAL_Type__c) + &apos; : &apos; + TEXT(GLOBAL_Finance_Sub_Type__c)
,
RecordType.Name

)</formula>
        <inlineHelpText>Summary description of the ticket.</inlineHelpText>
        <label>Ticket Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Time_Spent__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Time spent on work (in hours).</inlineHelpText>
        <label>Time Spent (hours)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Type__c</fullName>
        <description>The type of the ticket.</description>
        <inlineHelpText>The type of the ticket.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Budget Monitoring Adjustments (Planner)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Centre Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Code Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How do I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Something is not working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I need something</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Monitoring Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recharges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Setting Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Adjustment query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year End query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service costing query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benchmarking support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freedom of Information query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLOBAL_Working_Days_Elapsed__c</fullName>
        <description>Number of working days during which the Ticket was opened or escalated</description>
        <inlineHelpText>Number of working days during which the Ticket was opened or escalated</inlineHelpText>
        <label>Working Days Elapsed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLOBAL_is_Closed__c</fullName>
        <description>True if the ticket has a closed status</description>
        <formula>ISPICKVAL( GLOBAL_Ticket_Status__c , &quot;Closed&quot;)</formula>
        <inlineHelpText>True if the ticket has a closed status</inlineHelpText>
        <label>Ticket is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HHW_Enquiry_Description__c</fullName>
        <description>More details about the problem (optional)</description>
        <inlineHelpText>More details about the problem (optional)</inlineHelpText>
        <label>Enquiry Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HHW_Enquiry_Summary__c</fullName>
        <description>Enquiry summary - Hounslow Highways</description>
        <formula>TEXT( HHW_Service__c )  &amp; &quot; - &quot;  &amp;   TEXT( HHW_Subcategory__c )</formula>
        <inlineHelpText>Enquiry summary - Hounslow Highways</inlineHelpText>
        <label>Highways Enquiry Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HHW_Hounslow_Borough__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enquiry is not about a specific location, or you cannot find street name, please check the box &apos;Hounslow Borough&apos;. Otherwise leave unchecked and specify Location in Target.</description>
        <inlineHelpText>If enquiry is not about a specific location, or you cannot find street name, please check the box &apos;Hounslow Borough&apos;. Otherwise leave unchecked and specify Location in Target.</inlineHelpText>
        <label>Hounslow Borough</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HHW_Location_Details__c</fullName>
        <description>Free-text location details used in Highways enquiries</description>
        <inlineHelpText>If enquiry is not about a specific location, or you cannot find the street name, please select &apos;Hounslow Borough&apos;. Enter more details about the location.</inlineHelpText>
        <label>Location Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HHW_Location__c</fullName>
        <description>Address selected via Target</description>
        <inlineHelpText>Please select street via Target or, if location is not found, tick &quot;Hounslow Borough&quot; checkbox</inlineHelpText>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HHW_Service__c</fullName>
        <description>Highways Service Area</description>
        <inlineHelpText>Highways Service Area</inlineHelpText>
        <label>Highways Service</label>
        <picklist>
            <picklistValues>
                <fullName>Drainage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop Kerb Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Enquiries</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Information Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ironwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licence Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Enquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roads &amp; Footpaths</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street Lights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street Signs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traffic Signals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trees, Shrubs &amp; Vegetation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HHW_Subcategory__c</fullName>
        <description>A list of standard enquiries of Hounslow Homes</description>
        <inlineHelpText>Select a matching topic or General Enquiry</inlineHelpText>
        <label>Highways Sub-category</label>
        <picklist>
            <controllingField>HHW_Service__c</controllingField>
            <picklistValues>
                <fullName>General Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Smell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flooding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apply For A Drop Kerb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freedom Of Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Enquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged/ Cracked Drain Or Man Hole Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Drain Or Man Hole Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apply For A Licence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Opportunities &amp; Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage To Pedestrian Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fault On Public Right Of Way</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstruction On Public Right Of Way</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Ice, Snow And Frost On Roads &amp; Footpaths</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Pothole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Obstruction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Obstruction (unauthorised)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spillage On Network (spillage On Road/footway/footpath)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streetlight/bollard Knocked Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unauthorised Dropped Kerb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unauthorised Shop Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unauthorised Skip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uneven Footway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street Cleaning Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead Animal On A Road Or Footpath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dog Fouling</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PAY_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Payment amount.</inlineHelpText>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAY_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single Payment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PAY_Payment_successful__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the payment been successfully made?</inlineHelpText>
        <label>Payment successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Representative_ID__c</fullName>
        <formula>GLOBAL_Goal__r.REP_Customer_Representative__r.Id</formula>
        <label>Representative ID</label>
        <type>Text</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>Administrators</fullName>
        <columns>NAME</columns>
        <columns>GLOBAL_Ticket_Summary__c</columns>
        <columns>GLOBAL_Ticket_Status__c</columns>
        <columns>GLOBAL_SLA_Days_Remaining__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>GLOBAL_Goal__c</columns>
        <columns>GLOBAL_Goal_Summary__c</columns>
        <columns>GLOBAL_Opened_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Administrators</label>
        <queue>Administrators</queue>
        <sharedTo>
            <group>Test_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CCC_Tickets</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>GLOBAL_Ticket_Summary__c</columns>
        <columns>GLOBAL_Ticket_Status__c</columns>
        <columns>GLOBAL_SLA_Days_Remaining__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>GLOBAL_Goal__c</columns>
        <columns>GLOBAL_Goal_Summary__c</columns>
        <columns>GLOBAL_Opened_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ticket__c.CCC_Other,Ticket__c.Street_Care_Team,Ticket__c.Highways</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ticket__c.Environmental_Projects,Ticket__c.CCC_Payment,Ticket__c.CCC_Complaints</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ticket__c.CCC_Default,Ticket__c.CCC_Request_for_Information</value>
        </filters>
        <label>All CCC Tickets</label>
    </listViews>
</CustomObject>